--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -276,7 +276,7 @@ en-GB:
       information use title: "How do we use your information?"
       information use text: "When you sign up for a particular service that requires registration, we ask you to provide personal information. If LifeChurch.tv would like to use this information in a manner different than the purpose for which it was collected, then we will ask for your consent prior to such use. You may decline to submit personal information to any of our services, in which case we may not be able to provide those services to you."
       information security title: "How do we protect your information?"
-      information security text: "LifeChurch.tv does not share your personal information with other institutions outside of LifeChurch.tv without your explicit consent. LifeChurch.tv may share your personal information only if it believes that access, use, preservation or disclosure of such information is reasonably necessary to (a) satisfy any applicable law, regulation, legal process or enforceable governmental request, (b) enforce applicable terms of use, including investigation of potential violations thereof, (c) detect, prevent, or otherwise address fraud, security or technical issues, or (d) protect against imminent harm to the rights, property or safety of LifeChurch.tv, its users or the public as required or permitted by law.LifeChurch.tv takes appropriate security measures to protect against unauthorized access to or unauthorized alteration, disclosure or destruction of data. including internal reviews of our data collection, storage and processing practices and security measures, as well as physical security measures to guard against unauthorized access to systems where we store personal data. Unless explicit permission is obtained from you, LifeChurch.tv restricts access to personal information to  its employees, contractors and agents who need to know that information to operate, develop or improve our services. These individuals are bound by confidentiality obligations and may be subject to discipline, including termination and criminal prosecution, if they fail to meet these obligations."
+      information security text: "LifeChurch.tv does not share your personal information with other institutions outside of LifeChurch.tv without your explicit consent. LifeChurch.tv may share your personal information only if it has a good faith belief that access, use, preservation or disclosure of such information is reasonably necessary to (a) satisfy any applicable law, regulation, legal process or enforceable governmental request, (b) enforce applicable terms of use, including investigation of potential violations thereof, (c) detect, prevent, or otherwise address fraud, security or technical issues, or (d) protect against imminent harm to the rights, property or safety of LifeChurch.tv, its users or the public as required or permitted by law.LifeChurch.tv takes appropriate security measures to protect against unauthorized access to or unauthorized alteration, disclosure or destruction of data. including internal reviews of our data collection, storage and processing practices and security measures, as well as physical security measures to guard against unauthorized access to systems where we store personal data. Unless explicit permission is obtained from you, LifeChurch.tv restricts access to personal information to  its employees, contractors and agents who need to know that information to operate, develop or improve our services. These individuals are bound by confidentiality obligations and may be subject to discipline, including termination and criminal prosecution, if they fail to meet these obligations."
       data integrity title: "Data Integrity"
       data integrity text: "LifeChurch.tv reviews our data collection, storage and processing practices to ensure that we only collect, store and process the personal information needed to provide or improve our services. We take reasonable steps to ensure that the personal information we process is accurate, complete, and current, but we depend on our users to update or correct their personal information whenever necessary."
       information access title: "Accessing and updating personal information"
@@ -723,3 +723,24 @@ en-GB:
   reader help:
     title: "Select a verse…"
     line 1: "Click or tap on any verse or collection of verses to bookmark, highlight, create a note, or share with your friends!"
+  campaigns:
+    100m:
+      logo: "YouVersion: The Bible app"
+      tagline: "It starts with <em>100 million</em>"
+      intro: "Can the Bible App reach 100 million installs before our 5th anniversary on 10th July? Only with your help!"
+      share:
+        with friends: "Share with your friends"
+        fb:
+          dialog name: "Do you have the Bible App?"
+          dialog desc: "I love the Bible App! It’s really helped me make the Bible part of my everyday life. It lets me highlight, listen to audio Bibles, make notes, follow devotional plans…even watch videos! Go download it now (it’s free): http://www.bible.com/app"
+        em:
+          subject: "Do you have the Bible App?"
+          body: "I've been enjoying the Bible App from YouVersion and thought you might like it too. I’m opening the Bible a lot more these days because it’s so easy to read, watch, listen, and share. It even has plans, which have a selection of the Bible all picked out and waiting for me every day. \n\n You can get it (free!) for pretty much any mobile device here: \n http://www.bible.com/app"
+      body:
+        p1: "July 10 is going to be a big day. Not only is it the 5th anniversary of the Bible App, it also marks 5 years since the launch of Apple’s iTunes Store."
+        p2: "But even bigger? With your help, it’s the day the Bible App will reach 100 million downloads."
+        p3: "We’ve learned God uses milestones like this to fuel even greater growth."
+        p4: "Let’s make history together."
+      ad:
+        title: "The Bible App is completely free and a great way to explore the Bible."
+        copy: "Read, listen, watch, share. Get the Bible App for your smartphone or tablet: <a href='http://bible.com/app'>Download now</a>"
