--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -15,6 +15,13 @@ mk:
     users username not available: "Корисничкото име кое го побаравте не е достапно."
     users username or password invalid: "Корисничкото име или лозинката кои ги напишавте се невалидни."
     users username required: "Мора да внесете корисничко име."
+  meta:
+    100million:
+      title: "Започнува со 100 милиони"
+      description: "Апликацијата „Библија“ е преземена речиси 100 милиони пати - неверојатен успех! Но, ние со ова само се загреваме. Преземете ја бесплатната апликација „Библија“ денеска и потоа споделете ја со вашите пријатели. Ајде заедно да напишеме една страна во историјата."
+    mobile:
+      title: "Апликација „Библија“"
+      description: "Десетици милиони луѓе ја користат апликацијата „Библија“ да го читаат, слушаат, гледаат и споделуваат Светото писмо, правејќи го дел од секојдневието. Преземете ја бесплатната апликација и пристапете на вашите обележувачи, белешки и планови за читање во секое време, на секое место. Уживајте во стотици различни верзии, вклучувајќи и аудио верзии - сето тоа на вашиот мобилен уред."
   now: "Сега"
   celebrating 50MM: "Славиме 50 Милиони инсталирани апликации!"
   link: "Врска"
@@ -276,7 +283,7 @@ mk:
       information use title: "не преведувај"
       information use text: "Кога се пријавуваш за услуга која бара регистрација, бараме од тебе лични информации. Ако LifeChurch.tv сака да ги употреби тие информации на поразличен начин од целта за која биле прибрани, ќе побараме дозвола од тебе за таа употреба. Не прибираме или користиме лични информации за цели поразлични од оние опишани во Полисата за Приватност и/или во белешките за конкретните услуги, освен ако немаме дозвола од тебе за тоа. Можеш да одбиеш да дадеш лични информации на која било наша услуга, што значи LifeChurch.tv можеби нема да може да ти ја овозможи истата."
       information security title: "Како ги заштитуваме вашите информации?"
-      information security text: "не преведувај"
+      information security text: "LifeChurch.tv не ги споделува твоите лични информации со други институции надвор од LifeChurch.tv без твоја експлицитна согласност. LifeChurch.tv може да ги сподели твоите лични информации само ако има добра верба дека пристапот, користењето, зачувувањето или откривањето на таква информација е разумно потребно за да се (a) задоволи одреден закон, рагулатива, судски процес или владино барање, (b) спроведе применливи услови на користење, вклучувајќи можни прекршоци, (c) детектира, спречува или во спротивно посочува на измама, безбедносни или технички прашања, или (d) да се заштити против повреда на правата, имотот и безбедноста на LifeChurch.tv, неговите корисници или на јавноста како што е дозволено или забрането со закон. LifeChurch.tv ги превзема неопходните безбедносни мерки да се заштити од неовластен пристап или неовластено менување, објавување или уништување на податоци. Вклучувајќи внатрешни прегледи на нашите податочни колекции, податочни складишта  или процесни практики и безбедносни мерки, како и мерки на физичко обезбедување за заштита од неовластен пристап кон системите каде што ги чуваме личните податоци. Освен со експлицитна дозвола добиена од тебе, LifeChurch.tv го ограничува пристапот на лични информации на своите вработени,  изведувачи и агенти на кои им е потребна таа информација за да ги оперираат, развиваат и унапредуваат нашите сервиси. Овие индивидуалци се обврзани со договори за доверливост и може да бидат предмет на дисциплински мерки, вклучувајќи завршување на работниот однос и кривични пријави, доколку не ги следат овие обврски."
       data integrity title: "Интегритет на податоците"
       data integrity text: "не преведувај"
       information access title: "Пристапување и ажурирање на личните податоци"
@@ -723,3 +730,26 @@ mk:
   reader help:
     title: "Избери стих..."
     line 1: "Кликни или допри на било кој стих или збир на стихови за да ги обележиш или нагласиш, да запишеш белешка, или да ја споделиш со твоите пријатели! "
+  campaigns:
+    100m:
+      logo: "YouVersion: апликација Библија"
+      tagline: "Започнува со <em>100 милиони</em>"
+      intro: "Дали може апликацијата Библија да достигне 100 милиони инсталации пред нашата 5 годишнина на 10 Јули? Само со твоја помош!"
+      share:
+        with friends: "Сподели со твоите пријатели"
+        fb:
+          dialog name: "Дали ја имаш апликацијата Библија?"
+          dialog desc: "Ја сакам апликацијата Библија! Навистина ми помогна Библијата да стане дел од мојот секојдневен живот. Ми дозволува да подвлечам текст, да слушам аудио Библија, да пишувам белешки, да следам план за побожност... дури и да гледам видеа! Превземи ја сега (бесплатна е): http://www.bible.com/app"
+        tw:
+          tweet: "Апликацијата „Библија“ од @YouVersion има постојано место на мојот екран. Читај, гледај, слушај и споделувај... сето тоа во една бесплатна апликација: bible.com/app"
+        em:
+          subject: "Дали ја имаш апликацијата Библија?"
+          body: "Уживав со апликацијата Библија од YouVersion и помислив дека може да ти се допадне и на тебе. Ја отварам Библијата многу почесто овие денови бидејќи толку е лесна да се чита, гледа, слуша и споделува. Дури има и план, кој што има избран дел од Библијата што ме чека секој ден. ⏎\n⏎\nМожеш да ја превземеш (бесплатно!) за речиси секој мобилен уред тука: ⏎\nhttp://www.bible.com/app"
+      body:
+        p1: "10 Јули ќе биде голем ден. Не само што е 5 годишнина на апликацијата Библија, туку обележува и 5 години од лансирањето на Apple iTunes Store."
+        p2: "И уште повеќе? Со твоја помош, близу е денот кога апликацијата Библија ќе достигне 100 милиони превземања."
+        p3: "Научивме дека Господ користи моменти како овој да поттикне уште поголем развој."
+        p4: "Да ја направиме историјата заедно"
+      ad:
+        title: "Апликацијата Библија е целосно бесплатна и претставува одличен начин да се истражи Библијата."
+        copy: "Читај, Слушај, Гледај, Сподели. Превземи ја апликацијата Библија на твојот паметен телефон или таблет: <a href='http://bible.com/app'>Превземи сега</a>"
