--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -1,5 +1,6 @@
 mn:
   api:
+    users agree bool: "Данс бүртгүүлэхээр журамтай зѳвшѳѳрѳх шаардлагатай."
     users confirm password matches: "Шинэ нууц үгүүд таахгүй байна."
     users email email: "Энэ и-мэйл хаяг буруу байна."
     users email email rfc: "Таны оруулсан и-мэйл хаяг буруу байна."
@@ -8,6 +9,9 @@ mn:
     users email required: "И-мэйл хаягаа оруулах шаардлагатай."
     users hash verified: "Энэ данс батлагдсан. "
     users password change: "Таны шинэ нууц үгийг хуучин нууц үгээсээ ѳѳр байх шаардлагатай."
+    users password length: "Таны шинэ нууц үгийг хуучин нууц үгээсээ ѳѳр байх шаардлагатай."
+    users password required: "Нууц үгээ бичээрэй"
+    users username required: "И-мэйл хаягаа оруулах шаардлагатай."
   now: "Одоо"
   celebrating 50MM: "50 Сая Апп суулгагдсан баяраа тэмдэглэж байна!"
   link: "Холбоос"
@@ -203,6 +207,7 @@ mn:
     other user profile: "%{username}-н Хувийн Мэдээлэл"
     my password: "Нууц Үг Солих "
     edit password: "Нууц үгээ Солих "
+    edit password errors: "Дараахи алдаа(нуудаас) болж таны нууц үг байршуулагдсангүй:"
     picture: "Зураг"
     edit picture: "Зураг Солих"
     edit notifications: "Мэдэгдэлүүд Засах"
@@ -267,7 +272,6 @@ mn:
       information use title: "Бид таны мэдээлэлийг хэрхэн ашигладаг вэ?"
       information use text: "Бүртгэл шаардлагатай тодорхой үйлчилгээнд та бүртгүүлэхэд, бид таниас хувийн мэдээлэлээ оруулахыг хүсдэг. Хэрэв LifeChurch.tv таны мэдээлэлийг анх цуглуулснаас өөр зорилгоор ашиглахыг хүсвэл, бид таниас ашиглаж болох зөвшөөрлийг авах болно. Бид Хувийн Нууцлалын Бодлогод тодорхойлогдсоноос өөр зорилгоор мөн/эсвэл онцгой үйлчилгээний мэдэгдэлд таны хувьд эмзэг мэдээлэлүүдийг, таны зөвшөөрөлгүйгээр цуглуулан мөн ашиглахгүй болно. Та бидний аливаа үйлчилгээнд өөрийн хувийн мэдээлэлээ өгөхөөс татгалзах эрхтэй, энэ тохиолдолд  LifeChurch.tv-н зүгээс тэдгээр үйлчилгээг танд хангаж өгөх боломжгүй. "
       information security title: "Мэдээлэлийн Хамгаалалын Тухай"
-      information security text: "LifeChurch.tv нь таны мэдээлэлд саад болсон зүйл, хаалт эсвэл эрх нь танигдаагүй үйл явц эсвэл зөвшөөрөгдөөгүй нэвтрэлт зэрэгээс хамгаалах зөв зохистой хамгаалах арга хэмжээг авдаг. Энэ нь бидний мэдээлэл цуглуулалтын дотоод эргэлт, хадгалалт болон аюулгүй хамгаалалтын арга хэмжээний үйл явц мөн хувийн мэдээлэл хамгаалах системийн хэсэгт нэврэхийг оролдсон зөвшөөрөлгүй нэврэлтийн эсрэг хамгаалах бодит хамгаалалын арга хэмжээ зэргийг багтаадаг.\nБид LifeChurch.tv- ажилчдад, гэрээ байгуулалгчид болон бидний үйлчлэлийг дээшлүүлэх, хөгжүүлэх болон явуулахад шаардлагатай мэдээлэлүүдийг мэдэх хэрэгтэй агентлагуудад хүртэл таны хувийн мэдээлэлд нэврэх эрхийг хязгаарладаг.\nЭдгээр хувь хүмүүс нь итгэлтэй байдлын шаардлагуудад захирагддаг бөгөөд хэрэв тэдгээр шаардлагуудыг хангаж чадаагүй тохиолдолд үүргийг цуцлалт болон гэмт хэргийн яллалт зэргийг багтаасан сахилгажуулалтыг хүлээлгэнэ."
       data integrity title: "Мэдээлэлийн Шударга Байдал"
       data integrity text: "LifeChurch.tv нь таны хувийн мэдээлэлийг Хувийн Нууцлалын Бодлогын дагуу зөвхөн цуглуулсан зорилгын төлөө ашиглах бөгөөд үйлчилгээний-онцлог хэрэгцээ гарсан тохиолдолд танд мэдэгддэг  болно. Бид зөвхөн үйлчилгээ үзүүлэх шаардлага болон сайжруулах зорилгоор л таны мэдээллийг цуглуулж хадгалан ашигладаг бөгөөд өөрсдийн мэдээлэлийн цуглуулалт, хадгалалт болон боловсруулах үйл явцын найдвартай байдлыг нягталдаг.  Бидний боловсруулж буй мэдээлэл нь үнэн зөв, гүйцэд болон одоогийн байдлаар байгаа гэдгийг баталгаажуулхын тулд бидний зүгээс бүхий л зохистой алхмуудыг хийдэг. Харин шаардлагатай үед хувийн мэдээлэлээ оруулах болон засварлан шинэчлэх тал дээр бид хэрэглэгчиддээ бүрэн найддаг. "
       information access title: "Хувийн мэдээлэл оруулах болон шинэчлэх"
@@ -493,6 +497,13 @@ mn:
     must start to complete: " Дууссан уншлагаа хадгалахаар энэ тѳлѳвлѳгѳѳг эхлэх уу!"
     invalid reference: "Уучлаарай, Энэхүү уншлагт Библийн нэг ишлэлийн дугаар нь таны сонгосон Библийн орчуулгат байхгүй байж болзошгүй. Дээрх жагсаалтаас та өөр нэг Библийн орчлуулгыг сонгож үзээрэй. Хэрэт та хэвээрээ энэхүү үгсийг хүлээн авсаар байвал, манай <a href='%{support_url}'>дэмжлэгийн багт</a>  мэдэгдэнэ үү."
     sidebar notice: "Та унших тѳлѳвлѳгѳѳг харагдаж байна."
+    completed notice: "Баяр Хүргье! Уншлагын Тѳлѳвлѳгѳѳгѳѳ дууссан."
+    exit: "Гарах"
+  licenses:
+    authorized:
+      heading: "Таны мэдээлэл зѳвшѳѳрѳгдсѳн"
+    auth:
+      login link text: "Хэвтрэх"
   registration:
     placeholder:
       email: "И-мэйл хаягаа оруул"
@@ -688,3 +699,12 @@ mn:
     public domain: "Нийтийн Хүртээл "
     loading: "Илүү Орчуулга Ачаалаж байна..."
     load error: "Уучлаарай, илүү орчуулга ачааллахад алдаа гарлаа. Энэ цэсийг хаагаад дахин нэвтрэх үү."
+  reader help:
+    title: "Ишлэл сонгоорой..."
+  campaigns:
+    100m:
+      share:
+        fb:
+          dialog name: "Танд Библийн Апп байгаа юу?"
+        em:
+          subject: "Танд Библийн Апп байгаа юу?"
