--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -276,7 +276,6 @@ ru:
       information use title: "Как мы используем Вашу информацию?"
       information use text: "Когда Вы подписываетесь на конкретную услугу, для получения которой требуется регистрация, мы запрашиваем у Вас личные сведения. В случае если LifeChurch.tv захочет использовать эту информацию с целью, отличной от той, для которой она была получена, мы предварительно обратимся к Вам за разрешением на такое использование. Вы имеете право отказаться от предоставления личных сведений в любой из наших сервисов, и в таком случае предоставление нами Вам этих сервисов может оказаться невозможным."
       information security title: "Как мы защищаем Вашу информацию?"
-      information security text: "LifeChurch.tv не передает Вашу личную информацию другим организациям, не связанным с LifeChurch.tv, без Вашего на то согласия. LifeChurch.tv может предоставить Вашу личную информацию исключительно в том случае, если может добросовестно предполагать, что использование, сохранение, раскрытие или доступ к такой информации обоснованно необходимы для того, чтобы а) выполнить требования любого применимого закона, положения, судебной процедуры или подлежащего исполнению запроса государственных органов, б) обеспечить исполнение соответствующих Условий обслуживания, включая расследование потенциальных нарушений таких Условий; в) выявить, предотвратить или принять иные меры в отношении мошенничества, вопросов безопасности или технических проблем; или г) предотвратить неизбежное нанесение вреда правам, имуществу и безопасности LifeChurch.tv, ее пользователей или населению в целом, как того требует или допускает законодательство. LifeChurch.tv принимает соответствующие меры безопасности для предотвращения несанкционированного доступа или несанкционированного изменения, разглашения или удаления данных, включающие внутреннюю проверка наших правил по сбору, хранению и обработке данных, а также мер безопасности и физических защитных мер, принимаемых для защиты систем, в которых хранятся личные данные, от несанкционированного доступа. Без надлежащего от Вас разрешения LifeChurch.tv предоставляет доступ к личной информации только тем работникам, подрядчикам и агентам LifeChurch.tv, которым эта информация необходима для предоставления, разработки или улучшения качества наших услуг. Этих лиц связывают обязательства по неразглашению информации, в случае нарушения которых им могут грозить дисциплинарные меры, включая увольнение и уголовное преследование."
       data integrity title: "Целостность данных"
       data integrity text: "LifeChurch.tv постоянно анализирует свои правила по сбору, хранению и обработке информации, чтобы гарантировать, что мы собираем, храним и обрабатываем только ту информацию, которая необходима для предоставления наших услуг или их усовершенствования. Мы предпринимаем разумные меры для обеспечения точности и полноты информации, которую мы обрабатываем. При этом мы рассчитываем на то, что наши пользователи будут сами при необходимости вносить изменения или дополнения в свою личную информацию."
       information access title: "Доступ к личной информации и внесение изменений"
@@ -723,3 +722,11 @@ ru:
   reader help:
     title: "Выберите стих..."
     line 1: "Нажмите на любой стих или набор стихов, чтобы добавить закладку, выделить маркером, написать заметку или поделиться с друзьями."
+  campaigns:
+    100m:
+      intro: "Сможет ли приложение Библия достичь 100 млн установок до нашей пятой годовщины 10 июля? Только с вашей помощью!"
+      share:
+        fb:
+          dialog name: "У тебя есть приложение Библия?"
+        em:
+          subject: "У тебя есть приложение Библия?"
