--- a/config/locales/ta.yml
+++ b/config/locales/ta.yml
@@ -257,7 +257,6 @@ ta:
       information use title: "உங்கள் தகவலை நாங்கள் எப்படி பயன்படுத்துகிறோம்?"
       information use text: "நீங்கள் பதிவு செய்தல் தேவையுள்ள  ஒரு குறிப்பிட்ட சேவைக்கு  பதிவுபெறும் போது, நாங்கள் தனிப்பட்ட தகவல்களை தரும்படி உங்களை கேட்கிறோம். எந்த நோக்கத்திற்காக சேகரிக்கப்பட்டதோ அதிலிருந்து வேறுபட்ட வகையில்  இந்த தகவலை பயன்படுத்த LifeChurch.tv விரும்பினால், அப்படி பயன்படுத்துவதற்கு முன்னர் நாங்கள் உங்களிடம்  அனுமதி கேட்போம். எங்களின்  சேவைகளில் எதற்கா வது உங்களின் தனிப்பட்ட தகவலை சமர்ப்பிக்க மறுக்கும்பட்சம் உங்களுக்கு அந்த சேவைகளை எங்களால் வழங்க முடியாது."
       information security title: "எப்படி உங்கள் தகவலை நாங்கள் பாதுகாக்கிறோம்?"
-      information security text: "do not translate"
       data integrity title: "do not translate"
       data integrity text: "do not translate"
       information access title: "do not translate"
@@ -678,3 +677,10 @@ ta:
     public domain: "பொது தளம்"
     loading: "கூடுதல் பதிப்புகளை  ஏற்றுகிறது ..."
     load error: "மன்னிக்கவும், மேலும் பதிப்புகளை  ஏற்றுவதில் சிக்கல் ஏற்பட்டுள்ளது. இந்த பட்டியலை  மூடிவிட்டு மீண்டும் முயற்சிக்கவும்."
+  campaigns:
+    100m:
+      share:
+        fb:
+          dialog name: "உங்களிடம் வேதாகம App இருக்கின்றதா?"
+        em:
+          subject: "உங்களிடம் வேதாகம App இருக்கின்றதா?"
