--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -15,6 +15,13 @@ zh-CN:
     users username not available: "您选择的用户名不可用。"
     users username or password invalid: "您提供的用户名或密码无效。"
     users username required: "请务必输入用户名。"
+  meta:
+    100million:
+      title: "从1亿开始"
+      description: "圣经软件的安装量已经超过1亿次，这真是一个不可思议的里程碑！但是我们才刚刚开始。下载免费的圣经软件，然后与朋友们分享这个软件，让我们一起开创历史。"
+    mobile:
+      title: "圣经软件"
+      description: "数千万的人正在通过圣经软件阅读、收听、观看并分享神的话语，让神的话语成为成为他们日常生活的一部分。下载免费圣经软件，无论在哪里都可以访问您的书签、笔记和读经计划。享用数百种圣经译本，包括有声圣经，这一切都在您的移动设备上实现。"
   now: "今日社区"
   celebrating 50MM: "庆祝5000万的安装！"
   link: "链接"
@@ -276,7 +283,7 @@ zh-CN:
       information use title: "我们会如何使用您的信息？"
       information use text: "当您注册一个要求注册的特定服务的时候，我们要求您提供个人信息。如果LifeChurch.tv 使用这些信息的目的与与当初收集信息的目的不同，我们在使用前将首先征求您的同意。您可以拒绝向我们的任何服务提交个人信息，在这种情况下，LifeChurch.tv 有可能不能够给您提供相关的服务。"
       information security title: "我们如何保护您的信息？"
-      information security text: "没有您的明确同意，LifeChurch.tv 不会与 LifeChurch.tv 以外的其他组织共享您的个人信息。LifeChurch.tv 在确信接触、使用、保存或披露这些信息是合理的、必需的情况下，可以共享您的个人信息。前述合理的必需的情况包括：(a) 满足管辖法律、法规、法律程序或可执行的政府请求；(b) 执行适用的使用条款，包括调查潜在的违反使用条款的行为；(c) 侦查、阻止或处理欺诈、安全或技术问题；或 (d) 按照法律的要求或允许，保护 LifeChurch.tv及其用户和公众的权利、财产或安全免受迫在眉睫的损害。LifeChurch.tv 采取适当的安全措施来保护前述信息免受未经许可的存取、改动、披露或者数据的破坏。这包括内部审查我们的数据收集、储存与处理的行动和安全措施，还有实体安全措施来防止非法进入我们储存个人数据的系统。除非有您的明确同意，LifeChurch.tv 限制接触这些个人信息。LifeChurch.tv 只准许有需要取得信息来营运、开发，或提升我们服务的 LifeChurch.tv 员工、承包商和代理人使用这些个人信息。这些人员都受保密义务的约束，如果不履行这些义务，他们会受到处罚，包括终止合约和刑事起诉。"
+      information security text: "未经您明确同意，我们不会与LifeChurch.tv以外的其他机构分享您的个人信息。只有当我们有充分的理由相信，对这些信息的访问，使用，保存或披露是合理的，并且是必要的时候，LifeChurch.tv才会分享您的个人信息。这包括（a）满足任何适用的法律、法规、法律程序或者强制执行的政府要求，（b）执行适用的使用条款，包括调查潜在违规行为，（c）检测、预防或解决欺诈、安全或技术问题，或（d）在法律的要求或允许下，防止即将发生的损害行为以保护LifeChurch.tv ，它的用户或公众的财产和安全。 LifeChurch.tv会采取必要的安全措施，以防止未经授权的访问或未经授权的修改、披露或销毁数据。包括审查我们内部的数据收集、存储和处理惯例和安全措施，以及物理安全措施，以防止未经授权的访问个人数据存储系统。除非从您获得明确许可，LifeChurch.tv会限制访问个人信息，这包括雇员，承包商和那些需要知道这些信息来经营、开发和改善我们的服务的代理商。这些人都必须履行保密义务，否则会受到纪律处分，包括终止及刑事起诉。"
       data integrity title: "数据完整性"
       data integrity text: "LifeChurch.tv 审查数据收集、储存和处理的行为，以确保只收集、储存和处理那些提供或完善 LifeChurch.tv 服务所必须的个人信息。LifeChurch.tv 采取合理的步骤以确保 LifeChurch.tv 处理的个人信息是正确、完整的，但是LifeChurch.tv 依赖用户自己在必要时更新或更改他们的个人信息。"
       information access title: "获取并更新个人信息"
@@ -723,3 +730,24 @@ zh-CN:
   reader help:
     title: "选择一节经文…"
     line 1: "点击一节或数节经文可标书签、高亮显示、创建笔记或与朋友分享！"
+  campaigns:
+    100m:
+      logo: "YouVersion: 圣经软件"
+      tagline: "从<em>1亿</em>开始"
+      intro: "在7月10日，我们的五周年庆之前，圣经软件可以达到1亿份的安装量吗？全靠您的支持了！"
+      share:
+        with friends: "与您的朋友分享"
+        fb:
+          dialog name: "您有安装圣经软件吗？"
+          dialog desc: "我喜爱圣经软件！它真的帮助我使圣经成为我日常生活的一部分。圣经软件能帮我做经文高亮记号，听音频圣经，记录笔记，跟踪灵修计划... 甚至观看视频！快去这里下载吧（还是免费的）：http://www.bible.com/app"
+        em:
+          subject: "您有安装圣经软件吗？"
+          body: "我很喜欢使用 YouVersion 的圣经软件，我想你也会喜欢的。不管是阅读，看视频，听录音或分享经文，这个圣经软件都很好用，所以现在我接触圣经的次数也更多了。圣经软件甚至还包括了读经计划，可将经文有选择的挑出来，供我每天阅读。⏎\n⏎\n圣经软件支持几乎任何移动设备，你可以从这里 ( 免费! ) 安装：http://www.bible.com/app"
+      body:
+        p1: "7月10日将是一个大日子，它不仅是圣经软件诞生五周年，这也是苹果公司的iTunes商店开张五周年。"
+        p2: "还要更大？有了您的帮助，这将会是圣经软件将达到1亿次下载量的那一天。"
+        p3: "我们都知道神会使用类似的里程碑来推动更大的增长。"
+        p4: "让我们一起来开创历史"
+      ad:
+        title: "圣经软件是一个非常好，并且完全免费的圣经研读工具。"
+        copy: "阅读，看视频，听录音或分享经文。请立刻下载圣经软件到您的智能手机或平板电脑上: <a href='http://bible.com/app'>Download Now</a>"
