--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -276,7 +276,6 @@ zh-TW:
       information use title: "我們如何使用您的資訊？"
       information use text: "當您登入某個要求您註冊的服務時，我們會請您提供個人的資訊。如果 LifeChurch.tv 因有不同於當初收集此資訊的用途而希望改變使用這些資訊的方式時，我們將會在使用之前徵求您的同意。除非預先得到您的許可，我們絕不會在隱私權政策和 / 或特別服務通告裡所涵蓋的範圍以外收集或者使用敏感的資訊。您可以拒絕提交私人資訊給我們的服務，在這情況下 LifeChurch.tv  將不能給您提供這些相關的服務。"
       information security title: "我們如何保護您的資料？"
-      information security text: "沒有您的明確同意，LifeChurch.tv 不會與 LifeChurch.tv 以外的其他機構分享您的個人資訊。然而若我們有充分的理由相信存取、使用、保存或者披露此類資訊對下列情況是合理必要時，LifeChurch.tv 可能會分享您的個人資訊： (a) 滿足任何適用的法律、法規，法定程序或強制性的政府要求， (b) 強制性執行適用的使用條款，包括對潛在違規行為的調查。(c) 偵測、預防，或以其他方式解決詐欺、安全性或技術性問題，或 (d) 在法律要求或允許下保護 LifeChurch.tv、其服務使用者或公眾的權利、生命財產或安全以使其免受傷害。LifeChurch.tv 採取適當的安全措施來防守未經許可的存取或變更、披露或者數據的破壞。這包括內部檢視我們的數據收集、儲存與處理的行動和保安措施，還有實質的人力保安措施來防止非法擅入我們儲存個人數據的系統。除非有您明確的許可，LifeChurch.tv 嚴密限制任何個人資訊的存取，只准許有需要取得資訊來營運、開發，或提升我們服務的員工、承包商和代理人使用這些資訊。這些人員都受保密義務的約束，如果不履行這些義務，他們會受到適當的處罰，包括終止合約和刑事起訴，"
       data integrity title: "資料完整性"
       data integrity text: "LifeChurch.tv 審查我們所收集的數據、儲存和處理的慣例來確保我們只收集、儲存和處理用來提供或改進我們服務的個人資訊。我們採取合理的步驟以確保我們所處理的個人資料是正確、完整以及最新的，不過在任何有需要的時候，我們得依靠用戶們自己來更新或更正他們的個人資訊。"
       information access title: "存取和更新個人資訊"
@@ -723,3 +722,11 @@ zh-TW:
   reader help:
     title: "選擇一節經文…"
     line 1: "點擊任何一個或系列的經節來標記書籤、高亮顯示、創建筆記，或與朋友分享！"
+  campaigns:
+    100m:
+      intro: "聖經軟體能否在7月10日5週年前達到一億個安裝的里程碑嗎？全靠您的幫助！"
+      share:
+        fb:
+          dialog name: "您有使用聖經軟體嗎？"
+        em:
+          subject: "您有使用聖經軟體嗎？"
