--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -276,7 +276,6 @@ id:
       information use title: "Bagaimana kami menggunakan informasi Anda?"
       information use text: "Saat Anda mendaftar untuk layanan tertentu yang membutuhkan pendaftaran, kami meminta Anda menyediakan informasi pribadi. Jika LifeChurch.tv ingin menggunakan informasi ini untuk tujuan yang berbeda dari tujuan dikumpulkannya informasi ini, maka kami akan meminta persetujuan Anda terlebih dahulu sebelum menggunakannya. Anda dapat menolak memberikan informasi pribadi Anda ke layanan kami manapun, dalam hal ini, kami tidak dapat menyediakan layanan tersebut bagi Anda."
       information security title: "Bagaimana kami melindungi informasi tentang Anda?"
-      information security text: "LifeChurch.tv tidak membagikan informasi pribadi Anda dengan institusi lain di luar LifeChurch.tv tanpa persetujuan tegas dari Anda. LifeChurch.tv mungkin membagikan informasi pribadi Anda hanya jika terdapat suatu keyakinan kuat bahwa akses, penggunaan, preservasi atau pengungkapan informasi tersebut adalah penting dengan alasan untuk (a) melengkapi proses hukum, aturan, legalitas apapun yang berlaku atau permintaan yang memaksa secara pemerintahan, (b) melaksanakan Aturan Penggunaan yang berlaku, termasuk penyelidikan terhadap potensi kekerasan, (c) mendeteksi, mencegah atau mengatasi penipuan, keamanan atau isu-isu teknis lainnya, atau (d) melindungi terhadap kemungkinan pelanggaran terhadap hak-hak, properti atau keselamatan dari LifeChurch.tv, para penggunanya atau masyarakat umum sesuai permintaan atau yang diijinkan oleh hukum. LifeChurch.tv mengambil langkah pengamanan yang tepat untuk melindungi dari akses yang tidak berwenang atau pengubahan yang tidak sah, pengungkapan atau perusakan data, termasuk tinjauan internal dari koleksi data kami, penyimpanan dan praktek pengolahan dan langkah pengamanan, serta langkah pengamanan secara fisik untuk menjaga terhadap akses yang tidak sah ke sistem tempat kami menyimpan data pribadi. Kecuali dengan ijin yang jelas dari anda, LifeChurch.tv membatasi  akses ke informasi pribadi kepada para karyawan, kontraktor dan agen-agen yang perlu mengetahui informasi tersebut untuk mengoperasikan, mengembangkan atau meningkatkan pelayanan kami. Individu-individu ini terikat oleh kewajiban kerahasiaan dan dapat dikenakan disiplin, termasuk pemberhentian dan tuntutan kriminal, jika mereka gagal untuk memenuhi kewajiban ini."
       data integrity title: "Integritas Data"
       data integrity text: "LifeChurch.tv meninjau pengumpulan, penyimpanan dan pengolahan data kami untuk memastikan bahwa kami hanya mengumpulkan, menyimpan dan mengolah informasi pribadi yang dibutuhkan untuk menyediakan atau meningkatkan pelayanan kami. Kami mengambil langkah-langkah beralasan untuk memastikan bahwa informasi pribadi yang kami olah adalah akurat, lengkap, dan terkini, tapi kami bergantung pada para pengguna kami untuk memperbaharui atau memperbaiki informasi pribadi mereka kapanpun perlu."
       information access title: "Mengakses and memperbarui informasi pribadi"
@@ -723,3 +722,24 @@ id:
   reader help:
     title: "Pilih ayat..."
     line 1: "Klik atau tekan ayat yang mana saja ataupun sekumpulan ayat untuk menanda, soroti, ciptakan catatan, atau berbagi dengan teman-teman anda!"
+  campaigns:
+    100m:
+      logo: "YouVersion: Ap Alkitab"
+      tagline: "Dimulai dengan <em>100 juta</em>"
+      intro: "Dapatkah Ap Alkitab menjangkau 100 juta instalasi sebelum ulang tahun ke 5 kami pada tanggal 10 Juli? Hanya dengan bantuan anda saja!"
+      share:
+        with friends: "Berbagi dengan teman-teman anda"
+        fb:
+          dialog name: "Apakah anda memiliki Aplikasi Alkitab?"
+          dialog desc: "Saya suka Aplikasi Alkitab! Itu benar-benar membantu saya menjadikan Alkitab bagian kehidupan keseharian saya. Mengizinkan saya menyorot, mendengarkan Alkitab audio, membuat catatan, mengikuti program renungan...bahkan menonton video! Ayo unduhlah sekarang (gratis): http://www.bible.com/app"
+        em:
+          subject: "Apakah anda memiliki Aplikasi Alkitab?"
+          body: "Saya menikmati Ap Alkitab dari YouVersion dan berpikir mungkin anda juga akan menyukainya. Saya lebih sering membuka Alkitab hari-hari ini karena itu sangat mudah dibaca, ditonton, didengar, dan dibagikan. Itu bahkan memiliki Program, yang mencakup pilihan dari Alkitab semuanya terpilih dan menanti saya setiap harinya. \n\n Anda dapat mendapatkannya (gratis!) untuk hampir semua piranti bergerak di sini: \n http://www.bible.com/app"
+      body:
+        p1: "10 Juli akan menjadi hari yang besar. Bukan hanya ulang tahun ke 5 Ap Alkitab, itu juga menandai 5 tahun sejak peluncuran iTunes Store Apple."
+        p2: "Namun yang lebih besar lagi? Dengan bantuan anda, itulah hari di mana Ap Alkitab akan mencapai 100 juta unduhan."
+        p3: "Kami telah belajar bahwa Tuhan memakai pencapaian seperti ini untuk menunjang pertumbuhan yang lebih lagi."
+        p4: "Ayo bersama-sama membuat sejarah."
+      ad:
+        title: "Aplikasi Alkitab sepenuhnya gratis dan merupakan cara terhebat untuk menjelajahi Alkitab."
+        copy: "Baca, Dengarkan, Tonton, Bagikan. Dapatkan Ap Alkitab untuk ponsel atau tablet anda: <a href='http://bible.com/app'>Unduh Sekarang</a>"
