--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -276,7 +276,7 @@ ja:
       information use title: "個人情報の利用について"
       information use text: "登録を必要とする特定のサービスに登録する際には、個人情報をご登録いただくことになります。LifeChurch.tv では、当初の目的以外で前述の情報を利用する可能性がある場合には、利用に先立ち、登録者からの同意を求めます。どのサービスに対しても個人情報を送信することを拒否できますが、その場合にはLifeChurch.tv より該当するサービスを提供できなくなることがあります。"
       information security title: "どのように個人情報を保護していますか?"
-      information security text: "LifeChurch.tvは、同意を得ることなくLifeChurch.tv以外の機関と個人情報を共有することはありません。(a)該当する法律、法令、法的手続き、もしくは法的強制力のある行政機関による要請に応じる場合、(b)利用規約違反の可能性の調査を含め、該当する利用規約を執行する場合、(c)不正、安全性もしくは技術的問題の発見、予防、対処に必要な場合、(d)法律によって義務付けられている、もしくは許可されている、LifeChurch.tv、その利用者もしくは一般大衆の権利、所有物もしくは安全を脅かそうとする危険に対して保護手段をとる場合、個人情報へのアクセス、使用、保存、もしくは公開が必要であると善意の確信に基づいて判断された場合にのみ、LifeChurch.tvは個人情報を共有する可能性があります。LifeChurch.tv では、データへの不正アクセス、または無許可でのデータの変更、公開、破壊を防止するために適切なセキュリティ対策を行っています。これにはデータ収集、保存場所、処理方法、セキュリティ対策に対する内部監査や、個人データが保存されているシステムへの不当なアクセスを防ぐ物理的なセキュリティ対策の実施が含まれます。ユーザご本人からの許可がない限り、個人情報へのアクセスは、運営、開発、サービスの向上のために個人情報へのアクセスを必要とする LifeChurch.tv 従業員、契約社員、代理業者に制限されています。上記の者には守秘義務に従う同意の下、守秘義務を破った場合には、解雇・刑事訴追を含む懲罰の対象となります。"
+      information security text: "LifeChurch.tvは、利用者の合意なくLifeChurch.tv外部の機関と個人情報を共有することはありません。(a)該当する法律、法令、法的手続き、もしくは法的強制力のある行政機関による要請に応じる場合、(b)利用規約違反の可能性の調査を含め、該当する利用規約を執行する場合、(c)不正、安全性もしくは技術的問題の発見、予防、対処に必要な場合、(d)法律によって義務付けられている、もしくは許可されている、LifeChurch.tv、その利用者もしくは一般大衆の権利、所有物もしくは安全を脅かそうとする危険に対して保護手段をとる場合、個人情報へのアクセスへのアクセスし、使用、保存もしくは公開が必要であると善意の確信に基づいて判断された場合にのみ、LifeChurch.tvは個人情報を共有する可能性があります。LifeChurch.tv では、データへの不正アクセス、または無許可でのデータの変更、公開、破壊を防止するために適切なセキュリティ対策を行っています。これにはデータ収集、保存場所、処理方法、セキュリティ対策に対する内部監査や、個人データが保存されているシステムへの不当なアクセスを防ぐ物理的なセキュリティ対策の実施が含まれます。ユーザご本人からの許可がない限り、個人情報へのアクセスは、運営、開発、サービスの向上のために個人情報へのアクセスを必要とする LifeChurch.tv 従業員、契約社員、代理業者に制限されています。上記の者には守秘義務に従う同意の下、守秘義務を破った場合には、解雇・刑事訴追を含む懲罰の対象となります。"
       data integrity title: "データ保全"
       data integrity text: "LifeChurch.tv は、データ収集、保存場所、処理方法を監査し、サービスの提供・向上に必要な情報のみの収集、保存、処理の確保に講じています。こちらで利用する個人情報が正確、完全かつ最新のものであるように必要な努力を行いますが、必要に応じて、ユーザの皆様で更新・変更いただけますようお願いいたします。"
       information access title: "個人情報へのアクセスと更新"
@@ -723,3 +723,24 @@ ja:
   reader help:
     title: "聖句を選択…"
     line 1: "聖句にブックマークしたり、ノートを記録したり、お友達とシェアするには、ご希望の聖句（複数可）をクリックまたはタップしてください。"
+  campaigns:
+    100m:
+      logo: "YouVersion: 聖書アプリ"
+      tagline: " <em>1億人から</em>始まります。"
+      intro: "5周年記念日の7月10日までに聖書アプリのインストール数1億に到達することができるでしょうか？あなたの助け次第です！"
+      share:
+        with friends: "友達と共有する"
+        fb:
+          dialog name: "聖書アプリをお持ちですか？"
+          dialog desc: "聖書アプリはとても気に入っています！聖書を毎日の生活の一部とすることにとても役立っています。ハイライト表示したり、オーディオ聖書を聴いたり、メモを取ったり、デボーション・プランを利用したり…ビデオを観ることまで出来るんです！今すぐダウンロード（無料）しましょう：http://www.bible.com/app"
+        em:
+          subject: "聖書アプリをお持ちですか？"
+          body: "YouVersionの聖書アプリを楽しく活用しているので、あなたも使ってみたいのでは、と思いました。簡単に読んだり、観たり、聴いたり、シェアしたり出来るので、最近は今までよりも頻繁に聖書を開くようになりました。読書プランもあり、選び抜かれた聖書の箇所が、毎日あなたを待っています。⏎\n⏎\nほとんど全てのモバイル・デバイスに対応した聖書アプリは、ここから入手することが出来ます（無料）：⏎\nhttp://www.bible.com/app"
+      body:
+        p1: "7月10日はとても大切な日になります。聖書アプリ誕生5周年というだけではありません。この日は、アップル社のiTunesストアがオープンしてから5周年にもあたるのです。"
+        p2: "もっと重要なこと？あなたにお手伝いいただければ、この日には、聖書アプリのダウンロード数が1億に到達します。"
+        p3: "さらなる成長を促すために、神様はこのようなマイルストーンをお使いになります。"
+        p4: "歴史に残ることを一緒に成し遂げましょう。"
+      ad:
+        title: "聖書アプリは全て無料で、聖書を学ぶための素晴らしい手段です。"
+        copy: "読み、聞き、観賞し、シェアすることができます。あなたのスマートフォンやタブレットで聖書アプリを使いましょう : <a href='http://bible.com/app'>今すぐダウンロード</a>"
