--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -15,6 +15,13 @@ ko:
     users username not available: "입력하신 사용자명은 사용할 수 없습니다."
     users username or password invalid: "입력하신 사용자 이름이나 암호가 맞지 않습니다."
     users username required: "사용자명을 입력해주세요,"
+  meta:
+    100million:
+      title: "1억건 설치. 이제 시작입니다."
+      description: "성경 앱이 1억건 가까이 설치되었습니다. 역사적인 순간입니다! 하지만 이것은 시작일 뿐입니다. 무료 성경 앱을 다운로드하십시오. 그리고 친구들에게 소개해 주세요. 함께 역사를 만들어 가요."
+    mobile:
+      title: "성경 앱"
+      description: "수천 만명의 사람들이 성경 앱을 통해서 하나님의 말씀을 읽고, 듣고, 보고, 공유하고 있고 말씀을 일상 생활화 하고 있습니다. 무료 성경 앱을 다운로드 하셔서 책갈피, 노트, 묵상 등의 기능을 어디에서 든지 사용하세요. 수백가지의 번역본, 오디오 성경 등이 여러분의 이동기기 안으로 들어옵니다. "
   now: "실시간 현황"
   celebrating 50MM: "축 5천만째 설치!"
   link: "링크"
@@ -276,7 +283,7 @@ ko:
       information use title: "수집된 개인 정보 사용"
       information use text: "등록이 필요한 특정 서비스에 로그인하시는 경우 개인 정보를 요구합니다. LifeChurch.tv에서 수집한 사용자 정보를 다른 용도로 사용하려고 하는 경우 사전에 사용자의 동의를 구할 것입니다. 사용자는 개인정보 제출을 거부할 수 있습니다. 그 경우 저희는 사용자에게 서비스를 제공하지 못할 수 있습니다."
       information security title: "개인정보 보호"
-      information security text: "LifeChurch.tv는 사용자의 분명한 동의 없이 개인 정보를 LifeChurch.tv 이외의 외부 기관과 공유하지 않습니다. 사용자 개인 정보의 접근, 이용, 보존 또는 공개가 (a) 법이나 규정, 합법적인 절차, 정부의 강제력 있는 요청 (b) 잠재적인 위반 가능성 조사 등 적용 가능한 이용약관 집행 (c) 허위주소, 보안, 기술적 문제에 대한 검출, 방지 등의 조치 (d) 법적인 요청 또는 허가에 따라 LifeChurch.tv나 사용자, 대중의 권리나 재산, 안전을 침해하지 않도록 방지 등을 위해 합당하다고 확신하는 경우에만 공유할 수 있습니다. LifeChurch.tv는 정보에 대한 공인되지 않은 접근이나 변경, 노출, 훼손을 방지하기 위해 적절한 보안 수단을 취하고 있습니다. 여기에는 개인 정보를 저장한 시스템을 공인되지 않은 접근으로부터 보호하기 위한 실제적인 보안 조치뿐 아니라 자료 수집에 대한 내부 검토, 보관과 처리, 보안 조치 등이 포함됩니다. 사용자로부터 분명한 허가를 받지 않는 이상 LifeChurch.tv는 서비스 제공, 개발, 개선을 위해 개인 정보를 필요로 하는 직원이나 계약자, 에이전트에게 개인 정보에 대한 접근을 제한합니다. 이들은 기밀유지의무를 수행해야 하며, 이 의무를 이행하지 않을 경우 사직, 형사 고발 등 징계를 받을 수 있습니다."
+      information security text: "LifeChurch.tv does not share your personal information with other institutions outside of LifeChurch.tv without your explicit consent. LifeChurch.tv may share your personal information only if it has a good faith belief that access, use, preservation or disclosure of such information is reasonably necessary to (a) satisfy any applicable law, regulation, legal process or enforceable governmental request, (b) enforce applicable Terms Of Use, including investigation of potential violations thereof, (c) detect, prevent, or otherwise address fraud, security or technical issues, or (d) protect against imminent harm to the rights, property or safety of LifeChurch.tv, its users or the public as required or permitted by law.LifeChurch.tv takes appropriate security measures to protect against unauthorized access to or unauthorized alteration, disclosure or destruction of data. including internal reviews of our data collection, storage and processing practices and security measures, as well as physical security measures to guard against unauthorized access to systems where we store personal data. Unless explicit permission is obtained from you, LifeChurch.tv restricts access to personal information to  its employees, contractors and agents who need to know that information to operate, develop or improve our services. These individuals are bound by confidentiality obligations and may be subject to discipline, including termination and criminal prosecution, if they fail to meet these obligations."
       data integrity title: "정보의 정확성"
       data integrity text: "LifeChurch.tv는 오직 서비스 제공 및 향상에 필요한 개인 정보를 수집, 저장, 처리한다는 점을 보장하기 위해 자료 수집, 보관, 처리 상황을 검토합니다. 합리적인 절차를 통해 LifeChurch.tv에서 처리하는 개인정보의 정확성과 완전성, 유효성을 검증하나, 사용자가 필요시 개인 정보를 업데이트하거나 수정하는 행위에 의존합니다."
       information access title: "개인정보 접근 및 업데이트"
@@ -723,3 +730,26 @@ ko:
   reader help:
     title: "구절 선택하기 ..."
     line 1: "원하시는 구절을 클릭하거나 탭하시면 북마크, 하이라이트, 노트작성, 또는 다른 친구들과 공유하실 수있습니다."
+  campaigns:
+    100m:
+      logo: "YouVersion: 성경 앱"
+      tagline: "<em>1억건 다운로드</em> 이제 시작입니다."
+      intro: "성경 앱이  5주년 기념일인 7월 10일 전에 1억건 이상 설치되는 것이 가능할까요? 여러분이 도와주신다면 가능할 것입니다!"
+      share:
+        with friends: "친구들에게 알려 주세요."
+        fb:
+          dialog name: "성경 앱을 갖고 계신가요?"
+          dialog desc: "성경 앱을 정말 사랑합니다! 성경 말씀이 제 삶을 일부가 되도록 해주고 있습니다.  말씀을 하일라이트하고, 오디오 성경을 듣고, 노트를 만들고, 묵상계획을 갖도록 해줄 뿐 아니라 동영상도 볼 수있습니다! 지금 다운로드 하세요.(무료입니다.):  http://www.bible.com/app"
+        tw:
+          tweet: "The @YouVersion의 성경앱은 제 첫화면에 늘 자리하고 있습니다. 읽고, 보고, 듣고 그리고 공유하기. 무료 성경 앱 하나로 모두 가능합니다 : bible.com/app "
+        em:
+          subject: "성경 앱을 갖고 계신가요?"
+          body: "YouVersion 에서 나온 성경 앱을 사용해보니 참 좋아요.  사용하시면 좋아하실거예요.  성경 앱은 사용하기가 쉬워서,  말씀을 읽고, 듣고, 보고, 나누는데 아주 많은 도움이 됩니다.  묵상(성경 읽기계획)은 매일 읽을 성경 구절을 자동으로 선택해줍니다. <br /><br />\n대부분의 이동 기기에 지원되면 아래 링크에서 무료로 받을 수 있습니다: <br />  http://www.bible.com/app"
+      body:
+        p1: "7월 10일은 중요한 날이 될겁니다. 성경 앱이 출시된지 5주년이 되는 날이기도 하고 에플 아이튠스 마켓에 출시된지 5주년이 되는 날이기도 합니다."
+        p2: "더 커다란 꿈을 꿔볼까요? 여러분이 도와주신다면 성경 앱 1억건 다운로드를 이룰 수 있습니다."
+        p3: "하나님께서 이런 이정표가 될만한 일들을 더욱 커다란 일을 이룩하기 위한 동력으로 사용하신다는 것을 압니다."
+        p4: "함께 역사를 만들어 가시지 않을렵니까?"
+      ad:
+        title: "성경 앱은 말씀과 동행하게 해주는 아주 훌륭한 무료 앱입니다."
+        copy: "읽고, 듣고, 보고, 공유하세요. 여러분의 스마트폰이나 타블렛에 성경 앱을 설치하세요. : <a href='http://bible.com/app'>Download Now</a>"
