--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -15,6 +15,13 @@ sk:
     users username not available: "Vami zvolené prihlasovacie meno nie je dostupné."
     users username or password invalid: "Zadané prihlasovacie meno alebo heslo je neplatné."
     users username required: "Musíte zadať prihlasovacie meno."
+  meta:
+    100million:
+      title: "Začína to 100 miliónmi"
+      description: "Aplikácia Biblia bola nainštalovaná už takmer 100 miliónov krát, čo je významná udalosť! Ale my iba začíname. Stiahnite si bezplatnú aplikáciu Biblia ešte dnes - a potom ju zdieľajte s priateľmi. Poďme spolu tvoriť dejiny."
+    mobile:
+      title: "Aplikácia Biblia"
+      description: "Desiatky miliónov ľudí používajú aplikáciu Biblia na čítanie, počúvanie, sledovanie a zdieľanie Božieho Slova, čím sa stáva súčasťou ich každodenného života. Stiahnite si túto bezplatnú aplikáciu a získajte prístup k vašim záložkám a plánom čítania odvšadiaľ. Využite stovky prekladov vrátane audio nahrávok priamo na vašom mobilnom zariadení."
   now: "Teraz"
   celebrating 50MM: "Oslavujeme 50 miliónov inštalacií našej aplikácie!"
   link: "Odkaz"
@@ -723,3 +730,24 @@ sk:
   reader help:
     title: "Zvoľte si verš..."
     line 1: "Kliknutím alebo ťuknutím na verš alebo skupinu veršov môžete pridať záložku, zvýraznenie, vytvoriť poznámku, alebo zdieľať zvolený obsah s vašimi priateľmi!"
+  campaigns:
+    100m:
+      logo: "YouVersion: Aplikácia Biblia"
+      tagline: "Začína to <em>100 miliónmi</em>"
+      intro: "Stihne aplikácia Biblia dosiahnuť 100 miliónov inštalácií do svojich 5.narodenín 10.júla? Iba s vašou pomocou!"
+      share:
+        with friends: "Zdieľajte s priateľmi"
+        fb:
+          dialog name: "Máš aplikáciu Biblia?"
+          dialog desc: "Veľmi rád používam aplikáciu Biblia! Naozaj mi pomohla spraviť Bibliu každodennou súčasťou môjho života. Môžem si v nej zvýrazniť verše, počúvať audio nahrávky Biblie, robiť si poznámky, čítať podľa pripravených plánov...dokonca aj pozerať videá! Stiahni si ju aj ty (je to zadarmo): http://www.bible.com/app"
+        em:
+          subject: "Máš aplikáciu Biblia?"
+          body: "Používam aplikáciu Biblia od YouVersion a myslím si, že by sa ti tiež mohla páčiť. Odkedy ju mám, otváram Bibliu oveľa častejšie, pretože je veľmi jednoduché ju čítať, sledovať, počúvať a zdieľať. Dokonca má aj plány čítania, kde každý deň na mňa čaká vybraná pasáž Biblie.<br/>\n<br/>\nZ tohto odkazu si ju môžeš nainštalovať (zadarmo!) na takmer akékoľvek mobilné zariadenie:\nhttp://www.bible.com/app"
+      body:
+        p1: "10.júl bude veľký deň. Nie je to iba piate výročie aplikácie Biblia, v ten deň je aj 5 rokov od spustenia iTunes Store spoločnosti Apple."
+        p2: "No ešte väčšia udalosť? S vašou pomocou dosiahne aplikácia Biblia 100 miliónov stiahnutí."
+        p3: "Zistili sme, že Boh si používa takéto významné udalosti na podporenie ešte väčšieho rastu."
+        p4: "Poďme spolu tvoriť dejiny."
+      ad:
+        title: "Aplikácia Biblia je úplne bezplatná a skvelá cesta ako preskúmať Bibliu."
+        copy: "Čítajte, počúvajte, pozerajte, zdieľajte. Stiahnite si aplikáciu Biblia pre váš smartfón alebo tablet: <a href='http://bible.com/app'>Stiahnuť teraz</a>"
